--- a/build.gradle
+++ b/build.gradle
@@ -25,4 +25,5 @@ dependencies {
     implementation 'me.mattstudios:triumph-config:1.0.5-SNAPSHOT'
     implementation 'com.github.dkim19375:dkim19375JDAUtils:1.3.3'
     implementation 'com.google.code.gson:gson:2.8.6'
+    implementation 'org.apache.commons:commons-csv:1.8'
 }
