--- a/build.gradle
+++ b/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = 'me.dkim19375.qotdy.QOTDYBot'
 
 //noinspection GroovyUnusedAssignment
-sourceCompatibility = targetCompatibility = JavaVersion.VERSION_11
+sourceCompatibility = targetCompatibility = JavaVersion.VERSION_1_8
 compileJava.options.encoding 'UTF-8'
 
 group 'me.dkim19375'
@@ -25,5 +25,4 @@ dependencies {
     implementation 'me.mattstudios:triumph-config:1.0.5-SNAPSHOT'
     implementation 'com.github.dkim19375:dkim19375JDAUtils:1.3.3'
     implementation 'com.google.code.gson:gson:2.8.6'
-    implementation 'org.apache.commons:commons-csv:1.8'
 }
